--- a/cgpa.html
+++ b/cgpa.html
@@ -1,30 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>GECA CGPA Calculator</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<body class="cgpa">
+  <div class="container">
 
-<h2>GECA CGPA Calculator</h2>
+    <h2>GECA CGPA Calculator</h2>
 
-<table id="cgpa-table">
-  <tr>
-    <th>Semester</th>
-    <th>Credits</th>
-    <th>SGPA</th>
-    <th>Action</th>
-  </tr>
-</table>
+    <table id="cgpa-table">
+      <tr>
+        <th>Semester</th>
+        <th>Credits</th>
+        <th>SGPA</th>
+        <th>Action</th>
+      </tr>
+    </table>
 
-<button id="add-sem">Add Semester</button>
+    <button id="add-sem">Add Semester</button>
+    <div id="cgpa-result">CGPA: 0.00</div>
 
-<div id="cgpa-result"></div>
+  </div>
 
-<br>
-<a href="index.html">⬅ Back to SGPA Calculator</a>
-
-<script src="cgpa.js"></script>
+  <script src="cgpa.js"></script>
 </body>
-</html>
