Remove class attribute from body tag

--- a/cgpa.html
+++ b/cgpa.html
@@ -1,4 +1,4 @@
-<body class="cgpa">
+<body>
   <div class="container">
 
     <h2>GECA CGPA Calculator</h2>
@@ -19,3 +19,4 @@
 
   <script src="cgpa.js"></script>
 </body>
+
