--- a/cgpa.html
+++ b/cgpa.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>GECA CGPA Calculator</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
   <div class="container">
 
@@ -12,11 +20,14 @@
       </tr>
     </table>
 
-    <button id="add-sem">Add Semester</button>
+    <button id="add-sem">➕ Add Semester</button>
+
     <div id="cgpa-result">CGPA: 0.00</div>
+
+    <a href="index.html" class="nav-btn">⬅ Back to SGPA</a>
 
   </div>
 
   <script src="cgpa.js"></script>
 </body>
-
+</html>
