--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>GECA SGPA Calculator</title>
+
+  <!-- Responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
   <div class="container">
 
@@ -36,5 +49,7 @@
 
   </div>
 
+  <!-- JS -->
   <script src="jugal.js"></script>
 </body>
+</html>
